# cfenc

./: .gitignore  CMakeLists.txt  FindCFHD.cmake  FindFFMPEG.cmake  FindUUID.cmake  README.md  TODO.md  version.h.in
src/: cfenc.cpp
